Working Blobs